--- a/src/components/tables/timesheetTable/TimesheetTable.module.scss
+++ b/src/components/tables/timesheetTable/TimesheetTable.module.scss
@@ -1,5 +1,5 @@
-.meetingScheduleContainer {
+.timesheetTableContainer {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 0.5rem;
-    height: 20rem;
+    height: 35rem;
 }
