--- a/src/components/tables/todayNotClockIn/TodayNotClockIn.module.scss
+++ b/src/components/tables/todayNotClockIn/TodayNotClockIn.module.scss
@@ -1,7 +1,6 @@
 .todayNotClockInContainer {
     border-radius: 0.5rem;
-    // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    border: 1px solid darkgray;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     height: 30rem;
 
 }
