--- a/src/components/view/viewScreen/viewScreen.module.scss
+++ b/src/components/view/viewScreen/viewScreen.module.scss
@@ -11,9 +11,12 @@
 
         ul>li {
             padding: 0;
+            display: flex;
+            flex-direction: column;
 
             >div {
                 padding-block: 0.85rem;
+                width: 100%;
 
                 svg {
                     background-color: darkgray;
