--- a/src/components/tables/viewScreenTable/ViewScreenTable.module.scss
+++ b/src/components/tables/viewScreenTable/ViewScreenTable.module.scss
@@ -1,6 +1,5 @@
 .viewScreenTableContainer {
-    // box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    border: 1px solid darkgray;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 0.5rem;
     height: 35rem;
 }
