--- a/src/components/tableData/attandanceTable/AttandanceTable.module.scss
+++ b/src/components/tableData/attandanceTable/AttandanceTable.module.scss
@@ -1,4 +1,8 @@
 .attandanceTableContainer {
+    .tableHead {
+        display: flex;
+        justify-content: space-between;
+    }
     .tableAction {
 
         svg {
